issue #134 has been solved more spacing between the table & static header

--- a/src/components/Calendar/style.scss
+++ b/src/components/Calendar/style.scss
@@ -231,7 +231,7 @@ main.jss4{
   position: absolute !important;
 }
 table.MuiTable-root{
-  margin-top: 40px;
+  margin-top: 43px;
 }
 .PrivateTabScrollButton-root {
   width: 0px !important;
