--- a/src/index.scss
+++ b/src/index.scss
@@ -517,4 +517,6 @@ a.MuiButtonBase-root.MuiTab-root.MuiTab-textColorPrimary{
   position: fixed !important;
 }
 
- 
+.MuiBox-root.MuiBox-root-280{
+  padding-top: 115px !important;
+}
